flight booking app initial

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <br><select  id="input-group">
                     <option value="">Preferred Airline</option>
                     <option value="">Qantas</option>
-                    <option value="">Singapoor Airlines</option>
+                    <option value="">Singapore Airlines</option>
                     <option value="">Qatar airways</option>
                     <option value="">Etihad Airways</option>
                     <option value="">Air New Zealand</option>
