Flight center commit

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                 <div id="input6"><!--input6-->
                     <!--Full name pattern is characters A to Z minimium 5 characters -->
                 <details> <summary> <b onclick ="addCode()">Passenger1</b></summary>
-                 Full Name:<input type="text" id="fullN" placeholder="Full Name"  onfocusout="myName()" pattern ="[A-Za-z].{5,}" required minlength="5">
+                 Full Name:<input type="text" id="fullN" placeholder="Full Name"  onfocusout="myName()"
+                  pattern ="[A-Za-z].{5,}" required minlength="5">
+                  
                  Gender:  <input type="radio"   name="gender" value ="male"> Male
 				 <input type="radio" name="gender" value ="female"> Female	<br>
 
