Flight center commit readme update

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                     <option value="ppay" id ="phoneP" >Phone Pay</option>                
                     </select><br>
                     <section class, name, id ="paySection">
-                    <label id="ccName">Name on Card:</label><input type ="text" placeholder="Name on card"><br>
+                    <label id="ccName">Name on Card:</label><input type ="text" placeholder="Name on card" required><br>
              
-                 <label id="cccard">Card Number:&nbsp;</label><input type="tel" pattern="\d*" maxlength="19" placeholder="Card Number" onclick=""><br>
-                 <label id="ccexp">Expiry Date:&emsp;&nbsp;</label><input type ="month"  maxlength ="7">
+                 <label id="cccard">Card Number:&nbsp;</label><input type="tel" pattern="\d*" maxlength="19" placeholder="Card Number" required><br>
+                 <label id="ccexp">Expiry Date:&emsp;&nbsp;</label><input type ="month"  maxlength ="7" required>
                 </section>
                 <section class, id ="ppay">
 
