--- a/booking.html
+++ b/booking.html
@@ -37,6 +37,7 @@
 <script src="./booking.js"></script>
 
 </body>
+<!-- Adding audio to page-->
 <audio controls autoplay>
     <source src="ArtOfSilence.mp3" type="audio/mpeg" loop="true" hidden="hidden">
   </audio>
